# warmplane

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-artifacts.yml
docs/: DEPLOYMENT.md  INSTALL.md  MCP0_FOLLOW_UPS.md  NEXT_LEVEL_TOOL_CALLING.md  OBSERVABILITY.md  TAKE_TWO.md  USER-GUIDE.md  WHITEPAPER.md  config.schema.json  index.html  openapi.yaml  spec.md
docs/research/: TOKEN_EFFICIENCY_RESEARCH_REPORT.md
eval/token-efficiency/: .gitignore  Cargo.toml  README.md
eval/token-efficiency/src/: main.rs
eval/token-efficiency/suites/: github_copilot_only.json  notion_only.json  public_fetch_only.json.disabled  public_filesystem_only.json  stripe_notion.json  stripe_notion_github.json  stripe_only.json
scripts/: smoke_mcp_server.sh
src/: auth_store.rs  config.rs  daemon.rs  http_v1.rs  main.rs  mcp_server.rs  models.rs  oauth_client.rs  oauth_discovery.rs  oauth_loopback.rs  telemetry.rs
