
[package]
name = "warmplane"
version = "0.1.1"
edition = "2021"
description = "Local control plane that keeps MCP sessions warm with compact capability/resource/prompt facades."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Warmplane/warmplane"
homepage = "https://github.com/Warmplane/warmplane"
keywords = ["mcp", "agent", "cli", "proxy", "orchestration"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# MCP protocol
rmcp = { version = "0.15.0", features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest"] }

# Async runtime & HTTP
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }

# CLI & Data
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
